# multi-effect

./: .gitignore  Cargo.toml  README.md  config.dist.json  config.json  outline.md  run
src/: app.rs  config.rs  control.rs  effects.rs  engine.rs  http.rs  logging.rs  main.rs  save.rs
src/config/: master.rs  persist_fs.rs  preset.rs  snapshot.rs
src/control/: handle.rs  mapping.rs  midi.rs  network.rs  serial.rs
src/effects/: chorus.rs  delay.rs  eq.rs  harmonizer.rs  looper.rs  reverb.rs
src/engine/: device.rs  mix.rs  patch.rs  ring_buffer.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  i18n.ts  index.css  types.ts
ui/src/components/: AppHeader.tsx  BottomBar.tsx  ChainRoutingPopup.tsx  ChainView.tsx  ConfirmDelete.tsx  DeviceField.tsx  DevicesPage.tsx  EffectTile.tsx  EqGroupTile.tsx  FormRow.tsx  Knob.tsx  MappingsPanel.tsx  Popup.tsx  RoutingSelect.tsx  SavePresetPopup.tsx  SettingsPopup.tsx  TileSettingsPopup.tsx  Toasts.tsx  Toggle.tsx
ui/src/hooks/: useConnection.ts  useTheme.ts  useToasts.ts
ui/src/lang/: en.ts
ui/src/styles/: _base.scss  _chain.scss  _devices.scss  _drag.scss  _header.scss  _looper.scss  _mappings.scss  _popup.scss  _tile.scss  _toast.scss  _variables.scss  index.scss
